fix width so that ingredients doesn't take up too much of page. awkward space removed

--- a/css_custom_reset.css
+++ b/css_custom_reset.css
@@ -87,11 +87,11 @@ figure img {
 }
 
 .col-1-3 {
-  width: 33.33%;
+  width: 20%;
 }
 
 .col-2-3 {
-  width: 66.66%;
+  width: 80%;
 }
 
 .mph:after {
